# Algorithmic-Design-Exercises

./: Makefile  README.md  prova.x
Heaps/: CMakeLists.txt  binheap.c  binheap.h  main.c  newfile1.lyx  newfile1.lyx~  results.txt
Heaps/src/: binheap.c
Heaps2/: CMakeLists.txt  binheap.c  binheap.h  main.c  results.txt  total_orders.h
Heaps2/include/: binheap.h
Heaps2/src/: binheap.c  total_orders.c
Heaps2/tests/: .test_delete_min.c.swp  prova.c  test_delete_min.c  test_insert.c
Sort1/: CMakeCache.txt  Makefile  cmake_install.cmake  results.txt  test_sorting
Sort1/include/: binheap.h  bubble_sort.h  heap_sort.h  insertion_sort.h  quick_sort.h  select.h  selection_sort.h  swap.h  total_order.h  utilities.h
Sort1/src/: binheap.c  bubble_sort.c  heap_sort.c  insertion_sort.c  main.c  quick_sort.c  select.c  selection_sort.c  utilities.c
Sort2/: CMakeCache.txt  Makefile  cmake_install.cmake  results.txt  test_sorting
Sort2/include/: bubble_sort.h  insertion_sort.h  quick_sort.h  select.h
Sort2/src/: binheap.c  bubble_sort.c  heap_sort.c  main.c  quick_sort.c  select.c  swap.c  total_order.c
Strassen_Algorithm/: .strassen.c.swp  CMakeLists.txt  Report.md  matrix.c  results  results.txt  strassen.c  strassen.h
Strassen_Algorithm/include/: generalization_strassen.h  matrix.h  strassen.h
Strassen_Algorithm/src/: generalization_strassen.c  main.c  matrix.c  strassen.c
Weighted_Graphs/: CMakeCache.txt  CMakeLists.txt  Makefile  Report.md  Results  cmake_install.cmake  main.x  test_dijkstraa
Weighted_Graphs/include/: binheap.h  graph.h  queue.h  (+2 more)
(+8 files in other folders)
